--- a/CSS/body.css
+++ b/CSS/body.css
@@ -11,6 +11,11 @@ body{
 }
 
 .container{
-    max-width: 1920px;
+    max-width: 1520px;
     margin: 0 auto;
+}
+
+
+#home{
+    max-width: 1920px;
 }
