--- a/CSS/team.css
+++ b/CSS/team.css
@@ -5,9 +5,12 @@
     justify-content: center;
     text-align: center;
     top: 0;
-    background-image: url(../IMAGES/BACKGROUD/team.png);
+    background-image: url(../IMAGES/BACKGROUD/track.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position-y: center;
+    background-position-x: right;
+    
 }
 .team-heading{
     font-size: 30px;
@@ -28,12 +31,16 @@
     text-align: center;
 }
 
+
+
 .team-box .member-card{
     height: 300px;
     width: 200px;
     margin: 20px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: white;
+    background-image: url(../IMAGES/TEAM/backgroundTeam.png);
+    transition: 0.3s ease-in-out 0s;
 
 }
 
@@ -46,6 +53,11 @@
     height: 50%;
 }
 
+.member-card:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
 .team-box .member-card .card-side1 img{
     height: 100px;
 }
@@ -53,6 +65,7 @@
 .team-box .member-card .card-side2{
     margin-top: 0px;
     font-size: 13px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,6 +77,37 @@
     padding: 5px;
 }
 
+.team-social{
+    display: flex;
+}
+
+.team-social img{
+    height: 30px;
+    transition: .2s ease-in-out 0s;  
+}
+.team-social a{
+    margin: 10px;
+    
+}
+
+.team-social a:hover img{
+    height: 35px;
+  
+}
+
+
+
+
 .team-box .member-card .card-side2 p{
     padding: 5px;
+}
+
+
+@media screen and (max-width:450px){
+    #team{
+        background-image: url(../IMAGES/BACKGROUD/track.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: center;
+    }
 }
