--- a/CSS/careers.css
+++ b/CSS/careers.css
@@ -29,8 +29,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url(../IMAGES/BACKGROUD/career.png);
-    background-attachment: fixed;
+   /* background-image: url(../IMAGES/BACKGROUD/career.png);
+    background-attachment: fixed;*/
 }
 
 .dept-card{
