--- a/CSS/team.css
+++ b/CSS/team.css
@@ -39,7 +39,7 @@
     margin: 20px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: white;
-    background-image: url(../IMAGES/TEAM/backgroundTeam.png);
+   /* background-image: url(../IMAGES/TEAM/backgroundTeam.png);*/
     transition: 0.3s ease-in-out 0s;
 
 }
