--- a/CSS/careers.css
+++ b/CSS/careers.css
@@ -42,8 +42,8 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     overflow: hidden;
     background-color: white;
-    background-image: url(../IMAGES/CAREERS/backgroundCareers.png); 
-    
+   /* background-image: url(../IMAGES/CAREERS/backgroundCareers.png); 
+    */
     background-size: cover;
 }
 
