--- a/CSS/careers.css
+++ b/CSS/careers.css
@@ -29,8 +29,9 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-   /* background-image: url(../IMAGES/BACKGROUD/career.png);
-    background-attachment: fixed;*/
+    background-image: url(../IMAGES/BACKGROUD/career.png);
+   /* background-image: url(../IMAGES/BACKGROUD/career.png);*/
+    background-attachment: fixed;
 }
 
 .dept-card{
@@ -42,7 +43,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     overflow: hidden;
     background-color: white;
-    background-image: url(../IMAGES/BACKGROUD/career.png); 
+    
     
     background-size: cover;
 }
