--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -67,6 +67,11 @@
 
 }
 
+.mail{
+       
+}
+
+
 
 @media screen and (max-width:594px){
    
@@ -106,6 +111,7 @@
     }
 
 }
+
 
 
 @media screen and (max-width:360px){
