--- a/CSS/about.css
+++ b/CSS/about.css
@@ -42,7 +42,7 @@
     padding: 15px;
     font-size: 16px;
     font-weight: 500;
-    text-align: justify;
+    text-align: center;
     margin: 20px 0 0 40px;
     line-height: 1.5em;
 }
