--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -1,15 +1,76 @@
 #shop{
     margin: 50px 0;
-    height: 100vh;
-    background-image: url(../IMAGES/HOME/Shop\ v6.png);
-    background-size: cover;
+    height: 720px;
+   /* background-image: url(../IMAGES/HOME/Shop\ v6.png);
+    */background-size: cover;
     width: 100%;
+    background-color: #161616;
+   
  
     background-repeat: no-repeat;
 }
 
+.shop-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0 40px;
+}
+.head{
+  margin: 90px 0px 0 0px;
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.head .head-1{
+  height: 30px;
+  margin-right: 60%;
+}
+.head .head-2{
+  margin: 10px;
+  height: 60px;
+}
 
 
+.cent{
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 0 auto;
+
+}
+
+.cent img{
+  height: 300px;
+ 
+}
+
+
+
+.bot{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.bot .bot-1{
+  height: 2px;
+  margin: 30px 0 0 0 ;
+  width: 30%;
+}
+
+.bot .bot-2{
+  margin: 20px;
+  height: 30px;
+ 
+}
+/*
 
 
 #shop button:hover {
@@ -229,15 +290,19 @@
 
 
 
-
+*/
 
   @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
  
 
 .neon {
-    position: absolute;
-    margin-top: 60vh;
-    margin-left: 150px;
+  width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+    position: relative;
+    margin: 20px 0 0 0 ; 
+    right: 0;
 }
 
   #btn{
@@ -248,6 +313,7 @@
  
       display: inline-block;
       padding: 25px 30px;
+      text-align: center;
      
       color: #efefef;
       text-decoration: none;
@@ -360,9 +426,98 @@
 
 @media screen and (max-width:450px){
     #shop{
-        background-image: url(../IMAGES/HOME/Shop\ Mob.png);
+       /* background-image: url(../IMAGES/HOME/Shop\ Mob.png);
         background-repeat: no-repeat;
         background-size: cover;
+*/  height: 720px;
+    }
+
+    .shop-content{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      margin: 0px 0px 0 0px;
+    }
+    .head{
+      margin: 90px 0px 0 0px;
+      height: 50px;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+    }
+    
+    .head .head-1{
+      height: 15px;
+      margin-right: 0%;
+    }
+    
+    .head .head-2{
+      margin: 0px;
+      height: 30px;
+    }
+    
+    
+    .cent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15vh auto 0 auto;
+    
+    }
+    
+    .cent img{
+      height: 200px
 
     }
+    
+    
+    
+    .bot{
+      margin-top: 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    .bot .bot-1{
+      height: 2px;
+      width: 70%;
+      margin: 30px 0 0 0 ;
+    }
+    
+    .bot .bot-2{
+      margin: 20px;
+      height: 30px
+    }
+
+    .neon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+     
+  }
+  
+    #btn{
+        width: 240px;
+      background: #000000;
+      font-family: 'Raleway', sans-serif;
+      font-weight: bold;
+   
+        display: inline-block;
+        padding: 25px 30px;
+        text-align: center;
+       
+        color: #efefef;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: 0.5s;
+        letter-spacing: 4px;
+        overflow: hidden;
+}
+
 }
