--- a/CSS/body.css
+++ b/CSS/body.css
@@ -14,3 +14,26 @@ body{
     max-width: 1920px;
     margin: 0 auto;
 }
+
+
+#preloader {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:#fff; /*change if the mask should have another color then white */
+    z-index:9999;
+}
+
+#status {
+    width:200px;
+    height:200px;
+    position:absolute;
+    left:50%;
+    top:50%;
+    background-image:url(../IMAGES/LOADER/786.gif); /* path to your loading animation */
+    background-repeat:no-repeat;
+    background-position:center;
+    margin:-100px 0 0 -100px;
+}
