--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -14,6 +14,41 @@
     transition: 0.5s ease-in-out 0s;
 }
 
+
+.dropdown{
+
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    /* height: 20px; */
+    padding: 15px 0;
+    font-size: 14px;
+    /* background-color: #f9f9f9; */
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+
+
+
+
+
+
+
 .logo a{
     display: flex;
     flex-direction: row;
@@ -44,6 +79,7 @@
 
 .black{
     background-color: rgb(0, 0, 0);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .logo-txt {
