--- a/CSS/body.css
+++ b/CSS/body.css
@@ -32,9 +32,10 @@ body{
     position:absolute;
     left:50%;
     top:50%;
-    background-image:url(../IMAGES/LOADER/786.gif); /* path to your loading animation */
+    background-image:url(../IMAGES/LOADER/100.gif); /* path to your loading animation */
     background-repeat:no-repeat;
     background-position:center;
+    background-size: cover;
     margin:-100px 0 0 -100px;
 }
 
