--- a/CSS/sponsors.css
+++ b/CSS/sponsors.css
@@ -51,8 +51,10 @@
     outline:none;
     font-size: 16px;
     border: none;
-    border-radius: 10px;
-    background-color: rgb(32, 201, 173);
+    border-radius: 25px;
+    border: 1px solid rgb(26, 26, 26);
+   
+    background-color: rgb(196, 196, 196);
     cursor: pointer;
     transition: .3s ease-in-out 0s;
 }
@@ -60,7 +62,7 @@
 .sponsor-buttons button:hover{
     color: white;
     
-    background-color: rgb(3, 44, 46);
+    background-color: rgb(68, 68, 68);
 }
 
 .sponsor-buttons .btn1{
