--- a/CSS/careers.css
+++ b/CSS/careers.css
@@ -30,23 +30,32 @@
 }
 
 .career-button{
-    margin: 10px 10px;
-    padding: 10px 20px;
-    outline:none;
-    font-size: 16px;
-    border: none;
-    border-radius: 25px;
-    border: 1px solid rgb(26, 26, 26);
-   
-    background-color: rgb(196, 196, 196);
-    cursor: pointer;
-    transition: .3s ease-in-out 0s;
+    /* margin: 10px 10px;
+    padding: 10px 20px; */
+    margin: 10px 20px 0 0;
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+
+    /* We need this to position 
+        span inside button */ 
+    position: relative; 
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
 }
 
+
 .dept-box{
+    display: none;
     margin: 10px;
     flex-wrap: wrap;
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -54,6 +63,13 @@
     background-image: url(../IMAGES/CAREERS/career_back.png);
    /* background-image: url(../IMAGES/BACKGROUD/career.png);*/
     background-attachment: fixed;
+   
+}
+
+
+.career-active{
+    display: flex;
+   
 }
 
 .dept-card{
