--- a/CSS/cars.css
+++ b/CSS/cars.css
@@ -285,3 +285,14 @@
     }
     
 } */
+
+
+@media screen and (max-width:340px){
+    .cars-heading{
+        font-size: 30px;
+        font-weight: 700;
+        padding: 10px;
+        margin-top: 100px;
+        border-bottom: 1px solid pink;
+    }
+}
