--- a/CSS/sponsors.css
+++ b/CSS/sponsors.css
@@ -47,16 +47,25 @@
 }
 
 .sponsor-buttons button{
-    margin: 0 10px;
-    outline:none;
-    font-size: 16px;
-    border: none;
-    border-radius: 25px;
-    border: 1px solid rgb(26, 26, 26);
-   
-    background-color: rgb(196, 196, 196);
-    cursor: pointer;
-    transition: .3s ease-in-out 0s;
+  
+   /* margin: 10px 10px;
+    padding: 10px 20px; */
+    margin: 10px 20px 0 0;
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+
+    /* We need this to position 
+        span inside button */ 
+    position: relative; 
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
 }
 
 /* .sponsor-buttons button:hover{
@@ -116,5 +125,17 @@
     
     .sponsor-buttons .btn2{
         padding: 15px 30px;
+    }
+}
+
+@media screen and (max-width:340px){
+    .sponsor-buttons .btn1{
+        padding: 10px 10px;
+        
+    }
+    .sponsor-buttons .btn2{
+        padding: 10px 20px;
+        margin-top: 15px ;
+    
     }
 }
