--- a/CSS/team-update.css
+++ b/CSS/team-update.css
@@ -64,6 +64,7 @@
         background-image: url(../IMAGES//team-back-mob.svg);
         background-size: cover;
         background-repeat: no-repeat;
+        margin-bottom: 100px;
         /* background-attachment: fixed; */
     }
     
@@ -122,6 +123,7 @@
         background-image: url(../IMAGES//team-back-mob-s5.svg);
         background-size: cover;
         background-repeat: no-repeat;
+        margin-bottom: 60px;
         /* background-attachment: fixed; */
     }
 
