--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -135,6 +135,18 @@
         width: 100%;
         height: 70%;
     }
+    .apply-now{
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        margin: 10px 0;
+    }
+    .proceed-btn{
+        margin: 30px 0px 0 0;
+    }
+
 }
 
 @media screen and (max-width:340px){
