--- a/CSS/team-update.css
+++ b/CSS/team-update.css
@@ -8,6 +8,7 @@
     background-image: url(../IMAGES//team-back.svg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
     /* background-attachment: fixed; */
 }
 
