--- a/CSS/career-update.css
+++ b/CSS/career-update.css
@@ -8,6 +8,7 @@
     /* background-image: url(../IMAGES//career-back.svg); */
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
     /* background-attachment: fixed; */
 }
 
