--- a/CSS/joinus.css
+++ b/CSS/joinus.css
@@ -33,7 +33,7 @@
 .career-joinus-heading-box .career-joinus-heading .info-career-joinus-button{
     /* margin-top: 30px;
     margin-left: 50px; */
-    font-size: 16px;
+    /* font-size: 16px; */
     margin: 30px auto;
 }
 
@@ -63,6 +63,10 @@
     height: 600px;
 }
 
+.joinus-modal-text{
+    padding: 5px 0 0 0;
+    text-align: center;
+}
 
 @media screen and (max-width:768px){
 
