--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -134,6 +134,7 @@
     .modal{
         width: 100%;
         height: 90%;
+        z-index: 99999999;
     }
     .apply-now{
         font-size: 16px;
