--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -131,10 +131,13 @@
 
 
 @media screen and (max-width:450px){
+    .modal-bg{
+        z-index: 9999;
+    }
     .modal{
         width: 100%;
         height: 90%;
-        z-index: 99999999;
+       
     }
     .apply-now{
         font-size: 16px;
