--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -108,7 +108,7 @@
     }
 
     .proceed-btn{
-        margin: 20px 0px 0 0;
+        margin: 20px 5px 0 0;
         padding: 15px 20px; 
         border: none; 
         border-radius: 5px; 
@@ -136,29 +136,34 @@
     }
     .modal{
         width: 100%;
-        height: 90%;
+        height: 100%;
        
     }
+    .modal h3{
+        margin-bottom: 10px;
+     }
     .apply-now{
+        height: 80%;
+        width: 100%;
         font-size: 16px;
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 10px;
-        margin: 10px 0;
+        margin: 0px 0;
     }
     .proceed-btn{
-        margin: 30px 0px 0 0;
+        margin: 5px 0px 0 0;
     }
 
 }
 
 @media screen and (max-width:340px){
     
-    .modal-form{
+    /* .modal-form{
         height: 75%;
         width: 100%;
-    }
+    } */
     .proceed-btn{
         margin: 5px 0px 0 0;
         padding: 10px 15px; 
