--- a/CSS/sponsor-update.css
+++ b/CSS/sponsor-update.css
@@ -93,6 +93,10 @@
 @media screen and (max-width:768px){
 
 
+    .google-form{
+        height: 100%;
+        width: 100%;
+    }
     
     .sponsor-heading-box{
         min-height: 100vh;
