--- a/CSS/joinus.css
+++ b/CSS/joinus.css
@@ -66,6 +66,7 @@
 .joinus-modal-text{
     padding: 5px 0 0 0;
     text-align: center;
+    padding: 0 5%;
 }
 
 @media screen and (max-width:768px){
