--- a/CSS/sponsor-update.css
+++ b/CSS/sponsor-update.css
@@ -93,7 +93,7 @@
 @media screen and (max-width:768px){
 
 
-    .google-form{
+    .sponsor-google-form{
         height: 100%;
         width: 100%;
     }
