--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -1,5 +1,5 @@
 #shop{
-    margin: 50px 0 0 0;
+    margin: 50px 0;
     height: 720px;
    /* background-image: url(../IMAGES/HOME/Shop\ v6.png);
     */background-size: cover;
