--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -1,15 +1,296 @@
 #shop{
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    top: 0;
+    /* background-image: url(../IMAGES/aboutback.svg);  */
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    min-height: 100vh;
+}
+
+.shop-box{
+  width: 100%;
+  margin: 0px 40px 0 40px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+
+}
+.shop-btn{
+  display: flex;
+  margin-top: 40px;
+}
+
+.shop{
+  width: 50%;
+}
+
+.shop .shop-heading {
+  font-size: 30px;
+  font-weight: 700;
+  margin: 10px auto;
+  padding: 10px;
+  /* border-bottom: 1px solid pink; */
+  width: 80%;
+  text-align: left;
+  
+  
+}
+
+.shop .shop-content{
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+  margin: 0px 0 0 60px;
+  line-height: 1.5em;
+}
+
+.shop-box2{
+  height: 70%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.shop-box2 .slideshow-container img{
+  height: 350px;
+  
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot-shop {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+.mySlides-shop img{
+  height: 100px;
+}
+
+.shop-now{
+  /* margin-top: 20px!important; */
+  margin: 0 10px!important;
+}
+
+.mob-button{
+  display: none;
+}
+
+
+
+
+
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+
+
+
+@media screen and (max-width:768px){
+
+  #shop{
+      height: auto;
+      /* background-image: url(../IMAGES/aboutback-mob.svg); */
+      background-size: cover;
+      background-repeat: no-repeat;
+  }
+  .shop-box{
+      width: 100%;
+      margin: 110px 40px 0 40px;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+  
+  }
+  .shop{
+      width: 100%;
+  }
+
+  .lap-button{
+    display: none;
+  }
+
+  .mob-button{
+    display: block;
+  }
+
+  
+  .shop .shop-heading {
+      font-size: 25px;
+      margin: 25px auto;
+      padding: 10px;
+      border-bottom: 1px solid pink;
+      width: 95%;
+      text-align: center;
+      
+  }
+
+  .shop .shop-content{
+      padding: 15px;
+      font-size: 14px;
+      text-align: justify;
+      margin: 10px 10px;
+      line-height: 1.5em;
+  }
+  .shop-box2{
+      height: 70%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+  }
+
+  .shop-box2 .slideshow-container img{
+      height: 140px;
+      
+  }
+}
+
+
+@media screen and (max-width:450px){
+  .shop-box2 .slideshow-container img{
+      height: 200px;
+     
+      
+  }
+  .shop-box{
+    width: 100%;
+    margin: 50px 40px 0 40px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+
+  .shop-content p{
+    font-size: 18px;
+    text-align: left;
+  }
+
+
+}
+
+
+@media screen and (max-width:340px){
+
+  #shop{
+      height: auto;
+  }
+  .shop .shop-heading {
+      font-size: 20px;
+      font-weight: 700;
+      margin: 150px auto 25px auto;
+      padding: 10px;
+      border-bottom: 1px solid pink;
+      width: 90%;
+      text-align: center;
+      
+  }
+  .shop-box2 .slideshow-container img{
+    height: 130px;
+   
+    
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+/* #shop{
     margin: 50px 0;
     height: 720px;
-   /* background-image: url(../IMAGES/HOME/Shop\ v6.png);
-    */background-size: cover;
+   background-image: url(../IMAGES/HOME/Shop\ v6.png);
+   background-size: cover;
     width: 100%;
     background-color: #161616;
    
  
     background-repeat: no-repeat;
-}
-
+} */
+/* 
 .shop-content{
   display: flex;
   flex-direction: column;
@@ -69,7 +350,7 @@ margin: 0 auto;
   margin: 20px;
   height: 30px;
  
-}
+} */
 /*
 
 
@@ -292,7 +573,7 @@ margin: 0 auto;
 
 */
 
-  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
  
 
 .neon {
@@ -426,10 +707,10 @@ margin: 0 auto;
 
 @media screen and (max-width:450px){
     #shop{
-       /* background-image: url(../IMAGES/HOME/Shop\ Mob.png);
+       background-image: url(../IMAGES/HOME/Shop\ Mob.png);
         background-repeat: no-repeat;
         background-size: cover;
-*/  height: 100vh;
+        height: 100vh;
     }
 
     .shop-content{
@@ -520,4 +801,4 @@ margin: 0 auto;
         overflow: hidden;
 }
 
-}
+} */
