--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     top: 0;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .contact-heading{
@@ -76,7 +76,7 @@
 @media screen and (max-width:594px){
    
     #contact{
-        height: 100vh;
+         min-height: 100vh;
     }
 
     .contact-heading{
@@ -105,7 +105,7 @@
 
     .footer{
         font-size: 10px;
-        margin: 15px auto 15px auto;
+        margin: 5px auto 15px auto;
         padding: 10px;
     
     }
