--- a/shop/css/hero-slider.css
+++ b/shop/css/hero-slider.css
@@ -28,6 +28,38 @@ img {
   max-width: 100%;
 }
 
+.product{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 15px;
+}
+
+
+
+.product .primary-button-buy{
+  display: inline-block;
+  background-color: #ff7d27;
+  padding: 10px 20px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-size: 11px;
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+}
+
+.product .primary-button-buy a{
+  text-decoration: none!important;
+  color: unset!important;
+}
+.product .primary-button-buy a:hover{
+  color: unset!important;
+}
+
+
+
 /* -------------------------------- 
 
 Main Components 
