--- a/CSS/career-update.css
+++ b/CSS/career-update.css
@@ -184,3 +184,85 @@
     
     
 }
+
+
+@media screen and (max-width:450px){
+
+    #career{
+    
+        /* display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center; */
+        top: 0;
+        /* background-image: url(../IMAGES//career-back-mob.svg); */
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-attachment: fixed; */
+    }
+    
+    .career-heading-box{
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .career-heading-box .career-heading{
+        width: 95%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+    }
+    
+    .career-heading-box .career-heading p{
+        font-size: 25px;
+        text-align: center;
+        color: rgb(23, 63, 53);
+        font-weight: 600;
+    }
+    
+    .career-heading-box .career-heading .info-career p{
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 18px;
+        margin-left: 30px;
+        text-align: left;
+    }
+    
+    .career-heading-box .career-image{
+        width: 95%;
+    }
+    
+    .career-heading-box .career-image img{
+        margin-top: 60px;
+        height: 250px;
+    }
+    
+.career-toggle{
+    margin: 40px 0px 0 0;
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+
+
+    /* We need this to position 
+        span inside button */ 
+    position: relative; 
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
+}
+    
+    
+}
