--- a/CSS/cars.css
+++ b/CSS/cars.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 
